# args-env-demo

./: readme.md
demo/: demo.cabal
demo/arg-demo/: Main.hs
demo/env-demo/: Main.hs
nix/: default.nix
