cabal-version: 3.0

name: demo
version: 0

common base
    default-language: GHC2021
    default-extensions: ApplicativeDo
    build-depends:
      , base ^>= 4.18
      , envparse ^>= 0.5.0
      , optparse-applicative ^>= 0.18.1

executable arg-demo
    import: base
    hs-source-dirs: arg-demo
    main-is: Main.hs

executable env-demo
    import: base
    hs-source-dirs: env-demo
    main-is: Main.hs
